force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <description>User-facing requirement that describes a feature from end-user perspective</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>