force-app/main/default/objects/User_Story__c/fields/AC_Update_Complete__c.field-meta.xml
<CustomField>
    <fullName>AC_Update_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-SIT Formality: Acceptance Criteria updated</description>
    <label>AC Update Complete</label>
    <type>Checkbox</type>
</CustomField>