force-app/main/default/objects/User_Story__c/fields/All_Formalities_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_Formalities_Complete__c</fullName>
    <description>Formula: TRUE if all 6 story readiness checklist items are complete</description>
    <label>All Readiness Checklist Complete</label>
    <formula>AND(
    Unit_Test_Sheet_Complete__c,
    Manual_Deployment_Steps_Complete__c,
    Business_Dependency_Complete__c,
    AC_Update_Complete__c,
    Peer_Review_Complete__c,
    Story_Verified__c
)</formula>
    <type>Checkbox</type>
</CustomField>