force-app/main/default/objects/User_Story__c/fields/Business_Dependency_Complete__c.field-meta.xml
<CustomField>
    <fullName>Business_Dependency_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-SIT Formality: Business Dependency identified and documented</description>
    <label>Business Dependency Sheet Complete</label>
    <type>Checkbox</type>
</CustomField>