force-app/main/default/objects/User_Story__c/fields/Manual_Deployment_Steps_Complete__c.field-meta.xml
<CustomField>
    <fullName>Manual_Deployment_Steps_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-SIT Formality: Manual Deployment Steps documented</description>
    <label>Manual Deployment Steps Complete</label>
    <type>Checkbox</type>
</CustomField>