force-app/main/default/objects/User_Story__c/fields/Peer_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-SIT Formality: Peer Review completed</description>
    <label>Peer Review Complete</label>
    <type>Checkbox</type>
</CustomField>