force-app/main/default/objects/User_Story__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <description>Reason why story is in Pending status</description>
    <label>Pending Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>