force-app/main/default/objects/User_Story__c/fields/PR_Creation_Complete__c.field-meta.xml
<CustomField>
    <fullName>PR_Creation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story Readiness: Pull Request has been created and approved</description>
    <label>PR Creation Complete</label>
    <type>Checkbox</type>
</CustomField>