force-app/main/default/objects/User_Story__c/fields/QA_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Notes__c</fullName>
    <description>QA testing notes and feedback</description>
    <label>QA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>