force-app/main/default/objects/User_Story__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason for QA/SIT rejection</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>