force-app/main/default/objects/User_Story__c/fields/Smoke_Test_SIT_Complete__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test_SIT_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story Readiness: Smoke testing in SIT environment has been completed and passed</description>
    <label>Smoke Test SIT Complete</label>
    <type>Checkbox</type>
</CustomField>