force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the user story</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Dev In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Dev Completed</fullName>
            </value>
            <value>
                <fullName>Formalities InProgress</fullName>
            </value>
            <value>
                <fullName>Completed - SIT Ready</fullName>
            </value>
            <value>
                <fullName>PR InProgress</fullName>
            </value>
            <value>
                <fullName>Sent to SIT</fullName>
            </value>
            <value>
                <fullName>Sent to QA</fullName>
            </value>
            <value>
                <fullName>Sent to UAT</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>