force-app/main/default/objects/User_Story__c/fields/Story_Info_Verified__c.field-meta.xml
<CustomField>
    <fullName>Story_Info_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gate: Developer has verified story title, description, acceptance criteria, and all task info before starting Dev In Progress. Must be checked before status can move to Dev In Progress.</description>
    <label>Story Info Verified</label>
    <type>Checkbox</type>
</CustomField>