force-app/main/default/objects/User_Story__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <description>Estimation in story points</description>
    <label>Story Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>