force-app/main/default/objects/User_Story__c/fields/Story_Progress__c.field-meta.xml
<CustomField>
    <fullName>Story_Progress__c</fullName>
    <description>Weighted average using Estimated Hours</description>
    <label>Story Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>