force-app/main/default/objects/User_Story__c/fields/Story_Title__c.field-meta.xml
<CustomField>
    <fullName>Story_Title__c</fullName>
    <description>Short title of the user story</description>
    <label>Story Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>