force-app/main/default/objects/User_Story__c/fields/Translations_Sheet_Complete__c.field-meta.xml
<CustomField>
    <fullName>Translations_Sheet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story Readiness: Translations sheet has been completed for any UI/label changes</description>
    <label>Translations Sheet Complete</label>
    <type>Checkbox</type>
</CustomField>