force-app/main/default/objects/User_Story__c/fields/Unit_Test_Sheet_Complete__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Sheet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre-SIT Formality: Unit Test Sheet completed</description>
    <label>Unit Test Sheet Complete</label>
    <type>Checkbox</type>
</CustomField>