force-app/main/default/objects/User_Story__c/fields/Unit_Testing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Unit_Testing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developer must complete unit testing before story can move to Dev Completed</description>
    <label>Unit Testing Complete</label>
    <type>Checkbox</type>
</CustomField>