force-app/main/default/objects/User_Story__c/validationRules/All_Readiness_Required_Before_SIT_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Readiness_Required_Before_SIT_Ready</fullName>
    <active>true</active>
    <description>Ensures all 6 story readiness checklist items are complete before moving to Completed - SIT Ready</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Completed - SIT Ready"),
    ISCHANGED(Status__c),
    All_Formalities_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>All Story Readiness Checklist items must be completed before moving to "Completed - SIT Ready". Please ensure all 6 items are complete: Unit Test Sheet, Manual Deployment Steps, Business Dependency, AC Update, Peer Review, and Translations Sheet.</errorMessage>
</ValidationRule>