force-app/main/default/objects/User_Story__c/validationRules/Checklist_Required_Before_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Checklist_Required_Before_QA</fullName>
    <active>true</active>
    <description>Requires all task checklists to be completed before moving to QA</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, "Ready for QA"),
        ISPICKVAL(Status__c, "In QA"),
        ISPICKVAL(Status__c, "QA Approved")
    ),
    ISCHANGED(Status__c),
    Story_Progress__c &lt; 100
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Story cannot move to QA until all tasks are 100% complete. Current progress: {!Story_Progress__c}%</errorMessage>
</ValidationRule>