force-app/main/default/objects/User_Story__c/validationRules/Checklist_Required_Before_SIT.validationRule-meta.xml
<ValidationRule>
    <fullName>Checklist_Required_Before_SIT</fullName>
    <active>true</active>
    <description>Requires QA approval before moving to SIT</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, "Ready for SIT"),
        ISPICKVAL(Status__c, "In SIT"),
        ISPICKVAL(Status__c, "SIT Approved"),
        ISPICKVAL(Status__c, "Done")
    ),
    ISCHANGED(Status__c),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), "QA Approved")),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), "Ready for SIT")),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), "In SIT")),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), "SIT Approved"))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Story must be QA Approved before moving to SIT phase.</errorMessage>
</ValidationRule>