force-app/main/default/objects/User_Story__c/validationRules/Dev_Tasks_Complete_Before_Dev_Done.validationRule-meta.xml
<ValidationRule>
    <fullName>Dev_Tasks_Complete_Before_Dev_Done</fullName>
    <active>true</active>
    <description>Unit Testing must be completed (and all dev tasks Completed) before moving to Dev Completed</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Dev Completed"),
    ISCHANGED(Status__c),
    Unit_Testing_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Unit Testing must be completed and all Tasks marked Completed before moving to "Dev Completed". Please close the Unit Testing Activity Task or tick "Unit Testing Complete" first.</errorMessage>
</ValidationRule>