force-app/main/default/objects/User_Story__c/validationRules/Dev_Tasks_Must_Be_Complete_Before_Dev_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Dev_Tasks_Must_Be_Complete_Before_Dev_Completed</fullName>
    <active>true</active>
    <description>All custom Task__c records on this story must be Completed before moving to Dev Completed</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Dev Completed"),
    ISCHANGED(Status__c),
    Unit_Testing_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Unit Testing must be completed (and all dev Tasks marked Completed) before moving to "Dev Completed". Please ensure Unit Testing is done and tick the "Unit Testing Complete" checkbox.</errorMessage>
</ValidationRule>