force-app/main/default/objects/User_Story__c/validationRules/Formalities_Required_Before_SIT_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>Formalities_Required_Before_SIT_Ready</fullName>
    <active>true</active>
    <description>Ensures all pre-SIT formalities are complete before moving to Completed - SIT Ready</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Completed - SIT Ready"),
    ISCHANGED(Status__c),
    All_Formalities_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>All Pre-SIT formalities must be completed before moving to "Completed - SIT Ready". Please ensure: Unit Test Sheet, Manual Deployment Steps, Business Dependency, AC Update, and Peer Review are all complete.</errorMessage>
</ValidationRule>