force-app/main/default/objects/User_Story__c/validationRules/Progress_Cannot_Exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Cannot_Exceed_100</fullName>
    <active>true</active>
    <description>Ensures story progress percentage does not exceed 100%</description>
    <errorConditionFormula>Story_Progress__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Story_Progress__c</errorDisplayField>
    <errorMessage>Story progress cannot exceed 100%. Please verify task progress calculations.</errorMessage>
</ValidationRule>