force-app/main/default/objects/User_Story__c/validationRules/QA_Gate_Before_Sent_To_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Gate_Before_Sent_To_Prod</fullName>
    <active>true</active>
    <description>Story must pass through Sent to QA before it can be sent to Prod</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Sent to Prod"),
    ISCHANGED(Status__c),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Status__c), "Sent to QA"),
            ISPICKVAL(PRIORVALUE(Status__c), "Sent to UAT"),
            ISPICKVAL(PRIORVALUE(Status__c), "Sent to Prod")
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Story must pass QA (Sent to QA / Sent to UAT) before it can be Sent to Prod.</errorMessage>
</ValidationRule>