force-app/main/default/objects/User_Story__c/validationRules/Smoke_Test_Required_Before_Successfully_Deployed.validationRule-meta.xml
<ValidationRule>
    <fullName>Smoke_Test_Required_Before_Successfully_Deployed</fullName>
    <active>true</active>
    <description>SIT Smoke Test must be completed before story can be marked as Successfully Deployed to SIT</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Successfully Deployed to SIT"),
    ISCHANGED(Status__c),
    Smoke_Test_SIT_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Smoke Test SIT must be completed before moving to "Successfully Deployed to SIT". Please close the Smoke Test SIT Activity Task or tick the Smoke Test SIT Complete checkbox first.</errorMessage>
</ValidationRule>