force-app/main/default/objects/User_Story__c/validationRules/Story_Info_Verified_Before_Dev_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Story_Info_Verified_Before_Dev_Start</fullName>
    <active>true</active>
    <description>Story information must be verified by the developer before moving to Dev In Progress</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Dev In Progress"),
    ISCHANGED(Status__c),
    Story_Info_Verified__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Story information must be verified before starting development. Please close the "Verify Story Info" Activity Task or tick the "Story Info Verified" checkbox first.</errorMessage>
</ValidationRule>