force-app/main/default/objects/User_Story__c/validationRules/Translations_Required_Before_SIT_Ready.validationRule-meta.xml
<ValidationRule>
    <fullName>Translations_Required_Before_SIT_Ready</fullName>
    <active>true</active>
    <description>Translations sheet must be completed before moving to Completed - SIT Ready</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Completed - SIT Ready"),
    ISCHANGED(Status__c),
    Translations_Sheet_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Translations Sheet must be completed before moving to "Completed - SIT Ready". Please complete and tick the Translations Sheet Complete checkbox.</errorMessage>
</ValidationRule>