force-app/main/default/objects/User_Story__c/validationRules/Unit_Testing_Required_Before_Dev_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Testing_Required_Before_Dev_Completed</fullName>
    <active>true</active>
    <description>Unit Testing must be completed before story can move to Dev Completed status</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Dev Completed"),
    ISCHANGED(Status__c),
    Unit_Testing_Complete__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Unit Testing must be completed before moving to "Dev Completed". Please complete unit testing and check the "Unit Testing Complete" checkbox first.</errorMessage>
</ValidationRule>